Your commit message

--- a/about.html
+++ b/about.html
@@ -38,12 +38,25 @@
     </header>
 
     <main>
+        <section class="breadcrumb" style="background-image: url('assets/images/about/sea.png');">
+            <div class="breadcrumb-overlay">
+                <h1>About</h1>
+            </div>
+        </section>
         <section class="about-me">
-            <h1>About Me</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque blandit ipsum, ullamcorper tristique erat. Habitant interdum pellentesque a, auctor fermentum, dictum dictumst neque donec.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dignissim tempor nam dignissim neque, ullamcorper facilisis nulla hendrerit sagittis. Molestie placerat justo integer vitae elementum lectus.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dolor nunc purus id facilisi cursus risus egestas orci. Quis rhoncus nulla erat interdum adipiscing. Scelerisque interdum tristique arcu scelerisque.</p>
-            <p class="author-name">Samuals Robar</p>
+            <div class="about-grid">
+                <div class="about-image">
+                    <img src="assets/images/about/sea.png" alt="Sea Image">
+                </div>
+                <div class="about-text">
+                    <h1>About Me</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque blandit ipsum, ullamcorper tristique erat. Habitant interdum pellentesque a, auctor fermentum, dictum dictumst neque donec.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dignissim tempor nam dignissim neque, ullamcorper facilisis nulla hendrerit sagittis. Molestie placerat justo integer vitae elementum lectus.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dolor nunc purus id facilisi cursus risus egestas orci. Quis rhoncus nulla erat interdum adipiscing. Scelerisque interdum tristique arcu scelerisque.</p>
+                    <p class="author-name">Samuals Robar</p>
+                    <img src="assets/images/about/signature.png" alt="Signature" class="signature">
+                </div>
+            </div>
         </section>
 
         <section class="gallery">
@@ -58,22 +71,24 @@
                 <span class="filter">Turkey</span>
             </div>
             <div class="gallery-grid">
-                <img src="assets/images/usa.png" alt="USA">
-                <img src="assets/images/china.png" alt="China">
-                <img src="assets/images/india.png" alt="India">
-                <img src="assets/images/malaysia.png" alt="Malaysia">
-                <img src="assets/images/egypt.png" alt="Egypt">
-                <img src="assets/images/turkey.png" alt="Turkey">
+                <img src="assets/images/about/usa.png" alt="USA">
+                <img src="assets/images/about/china.png" alt="China">
+                <img src="assets/images/about/india.png" alt="India">
+                <img src="assets/images/about/rome.png" alt="Malaysia">
+                <img src="assets/images/about/tunnel.png" alt="Egypt">
+                <img src="assets/images/about/surf.png" alt="Turkey">
             </div>
         </section>
 
         <section class="newsletter">
-            <h2>Newsletter Signup</h2>
-            <p>Signup my newsletter for the latest tour plan and guide</p>
-            <form class="newsletter-form">
-                <input type="email" placeholder="Enter your email address" required>
-                <button type="submit" class="subscribe-button">Subscribe</button>
-            </form>
+            <div class="newsletter-overlay">
+                <h2>Newsletter Signup</h2>
+                <p>Signup my newsletter for latest tour plan and guide</p>
+                <form class="newsletter-form">
+                    <input type="email" placeholder="Enter your email address" required>
+                    <button type="submit" class="subscribe-button">Subscribe</button>
+                </form>
+            </div>
         </section>
     </main>
 
