--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
             <h2>Work with Me!</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dignissim tempor nam dignissim neque, ullamcorper facilisis nulla hendrerit sagittis.</p>
             <p>Phone: 123 456 78 90</p>
-            <p>Email: <a href="mailto:Contact@riadmahmud.com">Contact@riadmahmud.com</a></p>
+            <p>Email: <a href="mailto:Contact@stephanelkhoury.com">Contact@stephanelkhoury.com</a></p>
             <button class="say-hi">Say Hi!</button>
         </section>
     </main>
