Your commit message

--- a/about.html
+++ b/about.html
@@ -38,12 +38,12 @@
     </header>
 
     <main>
-        <section class="breadcrumb" style="background-image: url('assets/images/about/sea.png');">
+        <section class="breadcrumb appear" style="background-image: url('assets/images/about/sea.png');">
             <div class="breadcrumb-overlay">
                 <h1>About</h1>
             </div>
         </section>
-        <section class="about-me">
+        <section class="about-me appear">
             <div class="about-grid">
                 <div class="about-image">
                     <img src="assets/images/about/sea.png" alt="Sea Image">
@@ -59,7 +59,7 @@
             </div>
         </section>
 
-        <section class="gallery">
+        <section class="gallery appear">
             <h2>Gallery</h2>
             <div class="filters">
                 <span class="filter active">All</span>
@@ -80,7 +80,20 @@
             </div>
         </section>
 
-        <section class="newsletter">
+        <section class="as-seen-in appear">
+            <h2>As Seen In</h2>
+            <img src="assets/images/vector-40.svg" alt="Underline" class="underline">
+            <div class="logos-grid">
+                <img src="assets/images/about/logo1.png" alt="Logo 1">
+                <img src="assets/images/about/logo2.png" alt="Logo 2">
+                <img src="assets/images/about/logo3.png" alt="Logo 3">
+                <img src="assets/images/about/logo4.png" alt="Logo 4">
+                <img src="assets/images/about/logo5.png" alt="Logo 5">
+                <img src="assets/images/about/logo6.png" alt="Logo 6">
+            </div>
+        </section>
+
+        <section class="newsletter appear">
             <div class="newsletter-overlay">
                 <h2>Newsletter Signup</h2>
                 <p>Signup my newsletter for latest tour plan and guide</p>
