--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
     <meta name="description" content="Your website description for SEO">
     <meta name="keywords" content="your, keywords, here">
     <title>Your Website Title</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/hero.css">
+    <link rel="stylesheet" href="css/intro.css">
+    <link rel="stylesheet" href="css/places.css">
+    <link rel="stylesheet" href="css/banner.css">
+    <link rel="stylesheet" href="css/latest-posts.css">
+    <link rel="stylesheet" href="css/upcoming-tours.css">
+    <link rel="stylesheet" href="css/newsletter.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -38,7 +49,7 @@
     </header>
 
     <main>
-        <section class="hero" style="background-image: url('assets/images/nature-mountains.png');">
+        <section class="hero appear" style="background-image: url('assets/images/nature-mountains.png');">
             <div class="hero-overlay">
                 <div class="hero-content">
                     <p>Lorem ipsum dolor</p>
@@ -49,7 +60,7 @@
             </div>
         </section>
 
-        <section class="intro">
+        <section class="intro appear">
             <div class="intro-video">
                 <img src="assets/images/boat.png" alt="Intro Video">
                 <div class="play-button">
@@ -65,7 +76,7 @@
             </div>
         </section>
         
-        <section class="places-grid">
+        <section class="places-grid appear">
             <div class="place">
                 <img src="assets/images/paris.png" alt="Eiffel Tower">
                 <div class="place-content">
@@ -121,18 +132,18 @@
                 </div>
             </div>
         </section>
-        <div class="read-more-container">
+        <div class="read-more-container appear">
             <button class="read-more-button">Read More</button>
         </div>
         <div class="spacer"></div>
-        <section class="banner">
+        <section class="banner appear">
             <div class="banner-overlay">
                 <h1>Do Not Wait For The Perfect Time<br>Start Your Journey Today!</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sagittis sit volutpat nisi sit condimentum ante. Tincidunt lobortis vitae, eget tempus. At urna, in lorem elit quam tincidunt nibh convallis imperdiet. Amet morbi cras fringilla potenti morbi. Risus quis et id faucibus aliquet. Congue interdum dictum egestas turpis aliquam massa lobortis. Ullamcorper est.</p>
             </div>
         </section>
         <div class="spacer"></div>
-        <section class="latest-posts">
+        <section class="latest-posts appear">
             <h2>Latest Posts And Guides</h2>
             <img src="assets/images/vector-40.svg" alt="Underline" class="underline">
             <div class="posts-grid">
@@ -164,7 +175,7 @@
             <button class="view-all-button">View All</button>
         </section>
         <div class="spacer"></div>
-        <section class="upcoming-tours">
+        <section class="upcoming-tours appear">
             <h2>My Upcoming Tours & Destination</h2>
             <img src="assets/images/vector-40.svg" alt="Underline" class="underline">
             <div class="tours-grid">
@@ -195,7 +206,7 @@
             </div>
         </section>
         <div class="spacer"></div>
-        <section class="newsletter">
+        <section class="newsletter appear">
             <div class="newsletter-overlay">
                 <h2>Newsletter Signup</h2>
                 <p>Signup my newsletter for latest tour plan and guide</p>
