--- a/visited.html
+++ b/visited.html
@@ -38,9 +38,26 @@
     </header>
 
     <main>
-        <section class="visited-place">
-            <h1>Visited Place</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque blandit ipsum, ullamcorper tristique erat. Habitant interdum pellentesque a, auctor fermentum, dictum dictumst neque donec.</p>
+        <section class="breadcrumb appear" style="background-image: url('assets/images/about/sea.png');">
+            <div class="breadcrumb-overlay">
+                <h1>Visited Places</h1>
+            </div>
+        </section>
+
+        <section class="about-me appear">
+            <div class="about-grid">
+                <div class="about-text">
+                    <h1>About Me</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque blandit ipsum, ullamcorper tristique erat. Habitant interdum pellentesque a, auctor fermentum, dictum dictumst neque donec.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dignissim tempor nam dignissim neque, ullamcorper facilisis nulla hendrerit sagittis. Molestie placerat justo integer vitae elementum lectus.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dolor nunc purus id facilisi cursus risus egestas orci. Quis rhoncus nulla erat interdum adipiscing. Scelerisque interdum tristique arcu scelerisque.</p>
+                    <p class="author-name">Samuals Robar</p>
+                    <img src="assets/images/about/signature.png" alt="Signature" class="signature">
+                </div>
+                <div class="about-image">
+                    <img src="assets/images/about/sea.png" alt="Sea Image">
+                </div>
+            </div>
         </section>
 
         <section class="places-grid">
@@ -97,6 +114,30 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed est, tellus faucibus mi amet, metus. A tempus at odio quisque nec non eget varius commodo aliquet tincidunt.</p>
                     <a href="#" class="read-more">Read more</a>
                 </div>
+            </div>
+        </section>
+
+        <section class="as-seen-in appear">
+            <h2>As Seen In</h2>
+            <img src="assets/images/vector-40.svg" alt="Underline" class="underline">
+            <div class="logos-grid">
+                <img src="assets/images/about/logo1.png" alt="Logo 1">
+                <img src="assets/images/about/logo2.png" alt="Logo 2">
+                <img src="assets/images/about/logo3.png" alt="Logo 3">
+                <img src="assets/images/about/logo4.png" alt="Logo 4">
+                <img src="assets/images/about/logo5.png" alt="Logo 5">
+                <img src="assets/images/about/logo6.png" alt="Logo 6">
+            </div>
+        </section>
+
+        <section class="newsletter appear">
+            <div class="newsletter-overlay">
+                <h2>Newsletter Signup</h2>
+                <p>Signup my newsletter for latest tour plan and guide</p>
+                <form class="newsletter-form">
+                    <input type="email" placeholder="Enter your email address" required>
+                    <button type="submit" class="subscribe-button">Subscribe</button>
+                </form>
             </div>
         </section>
     </main>
